# SciCode_CPP

./: readme.md
src/: CMakeLists.txt  SciCalc.cpp  SciCalc.hpp  SciCodeIO.cpp  SciCodeIO.hpp  main.cpp  pugixml.hpp
src/test_inputs/: T0001.xml
